# energy-benchmark

./: .gitignore  .gitmodules  Cargo.toml  README.md  build.config.py  build.config.toml  build.rs  setup.toml
app/: Cargo.toml
app/src/: bench.rs  main.rs
benches/cmd/: Cargo.toml  README.md
benches/cmd/src/: lib.rs
benches/default-bench/: Cargo.toml
benches/default-bench/src/: lib.rs
benches/default-benches/: Cargo.toml
benches/filebench/: Cargo.toml  README.md
benches/filebench/src/: lib.rs  result.rs
benches/fio/: Cargo.toml  README.md  fio_plugin.c
benches/fio/src/: lib.rs  result.rs
benches/h5bench/: Cargo.toml  README.md
benches/h5bench/src/: lib.rs
benches/mlperf/: Cargo.toml  README.md
benches/mlperf/src/: lib.rs  result.rs  run.sh
benches/tpcc-postgres/: Cargo.toml  README.md  build-images.sh  tpcc-client.Dockerfile  tpcc-host.Dockerfile
benches/tpcc-postgres/src/: add-key.sh  docker-compose.template.yaml  gen-key.sh  lib.rs  result.rs  run.sh  set-keys.sh  tpcc-config.xml
benches/ycsb/: Cargo.toml  README.md
benches/ycsb/src/: lib.rs  result.rs
cgroup-helper/: Cargo.toml
cgroup-helper/src/: main.rs
common/: Cargo.toml
common/src/: bench.rs  config.rs  lib.rs  plot.rs  run-nonroot.sh  sensor.rs  trace.bt  util.rs
macros/: Cargo.toml
macros/src/: lib.rs
plots/: bar_chart.py  bw_over_time.py  common.py  efficiency.py  filebench_time.py  fio_time.py  latency.py  mlperf_time.py  power.py  throughput.py  time_series.py  tpcc_time.py  ycsb_time.py
plots/cmd-basic/: Cargo.toml
plots/cmd-basic/src/: lib.rs
plots/common/: Cargo.toml
plots/common/src/: lib.rs
plots/default-plots/: Cargo.toml
plots/default-plots/src/: lib.rs
plots/filebench-basic/: Cargo.toml
plots/filebench-basic/src/: lib.rs
plots/fio-basic/: Cargo.toml
plots/fio-basic/src/: lib.rs
plots/fio-bw-over-time/: Cargo.toml
plots/fio-bw-over-time/src/: lib.rs
plots/h5bench-basic/: Cargo.toml
plots/h5bench-basic/src/: lib.rs
plots/mlperf-basic/: Cargo.toml
plots/mlperf-basic/src/: lib.rs
plots/tpcc-basic/: Cargo.toml
plots/tpcc-basic/src/: lib.rs
plots/ycsb-basic/: Cargo.toml
plots/ycsb-basic/src/: lib.rs
plotting/: bw_over_time.py  common.py  efficiency.py  latency.py  power.py  throughput.py
scripts/: clean-info-json.py  compact_fio_json.py  min_max.py  pcie-numa-nodes.sh  plots.sh  run-fs.sh  run-n-fio.py
sensors/common/: Cargo.toml
sensors/common/src/: lib.rs
sensors/default-sensor/: Cargo.toml
sensors/default-sensor/src/: lib.rs
sensors/default-sensors/: Cargo.toml
sensors/diskstat/: Cargo.toml  README.md
sensors/diskstat/src/: lib.rs
sensors/netio-http/: Cargo.toml  README.md
sensors/netio-http/src/: lib.rs
sensors/pmt/: Cargo.toml  README.md  build.rs
sensors/pmt/src/: lib.rs
sensors/pmt/src/wrapper/: wrapper.cc  wrapper.hpp
sensors/powersensor3/: Cargo.toml  README.md  build.rs
sensors/powersensor3/src/: lib.rs
sensors/powersensor3/src/wrapper/: wrapper.cc
sensors/powersensor_3/: Cargo.toml  README.md  build.rs
sensors/powersensor_3/src/: lib.rs
sensors/powersensor_3/src/wrapper/: wrapper.cc  wrapper.hpp
sensors/rapl/: Cargo.toml  README.md
sensors/rapl/src/: lib.rs
sensors/sysinfo/: Cargo.toml  README.md
sensors/sysinfo/src/: lib.rs
