[workspace]
members = ["app", "common", "macros", "benches/default-benches", "sensors/default-sensors", "plots/default-plots"]
resolver = "3"

[package]
name = "setup"
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
pyo3 = "0.24"
typetag = "0.2"
eyre = "0.6"
async-trait = "0.1"
serde_json = "1.0"
flume = "0.11"
tracing = "0.1"
cxx = "1.0"
cxx-build = "1.0"
thiserror = "2.0"
itertools = "0.14"
regex = "1.11"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.44", features = ["full"] }
common = { path = "common" }

[build-dependencies]
toml_edit = "0.22"
toml = "0.8"
eyre.workspace = true
regex.workspace = true

[profile.release]
opt-level = 3
strip = true
