[workspace]
members = ["app", "common", "macros", "benches/default-benches", "sensors/default-sensors", "plots/default-plots"]
resolver = "3"

[package]
name = "setup"
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
typetag = "0.2"
eyre = "0.6"
async-trait = "0.1"
serde_json = "1.0"
flume = "0.11"
tracing = "0.1"
cxx = "1.0"
cxx-build = "1.0"
thiserror = "2.0"
itertools = "0.14"
regex = "1.11"
md5 = "0.8"
futures = "0.3"
rayon = "1.10"
async-io = "2.4.0"
csv = "1.3"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.45", features = ["full"] }
common = { path = "common" }
toml = "0.8"

[build-dependencies]
toml_edit = "0.23"
toml.workspace = true
eyre.workspace = true
regex.workspace = true

[profile.release]
opt-level = 3
strip = true
