[workspace]
members = ["app", "common", "macros", "benches/default-benches", "sensors/default-sensors", "plots/default-plots"]
resolver = "3"

[package]
name = "setup"
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
typetag = "0.2"
eyre = "0.6"
async-trait = "0.1"
serde_json = "1.0"
flume = "0.11"
tracing = "0.1"
cxx = "1.0"
cxx-build = "1.0"
thiserror = "2.0"
itertools = "0.14"
regex = "1.12"
futures = "0.3"
rayon = "1.11"
async-io = "2.6.0"
csv = "1.3"
num_cpus = "1.17"
atoi = "2.0.0"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.48", features = ["full"] }
common = { path = "common" }
# left in 0.8 to avoid breaking changes
toml = "0.8"

macros = { path = "macros" }
default-sensors = { path = "sensors/default-sensors" }
default-benches = { path = "benches/default-benches" }
default-plots = { path = "plots/default-plots" }
plot-common = { path = "plots/common" }
sensor-common = { path = "sensors/common" }

[build-dependencies]
toml_edit = "0.23"
toml.workspace = true
eyre.workspace = true
regex.workspace = true
build-print = "1"

[profile.release]
codegen-units = 1
# lto = true
opt-level = 3
strip = true
