[package]
name = "energy-benchmark"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4"
clap = { version = "4", features = ["derive"] }
eyre.workspace = true
serde_json.workspace = true
serde_yml = "0.0.12"
tokio.workspace = true
tracing.workspace = true
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["chrono", "env-filter"] }
common.workspace = true
flume.workspace = true
macros.workspace = true
default-sensors = { path = "../sensors/default-sensors" }
default-plots = { path = "../plots/default-plots" }
default-benches = { path = "../benches/default-benches" }
setup = { path = "../" }
indicatif = "0.18"
console = "0.16"
regex.workspace = true