[package]
name = "common"
version = "0.1.0"
edition = "2024"

[dependencies]
typetag.workspace = true
serde.workspace = true
eyre.workspace = true
async-trait.workspace = true
tokio.workspace = true
flume.workspace = true
tracing.workspace = true
downcast-rs = "2.0"
dyn-clone = "1.0"
thiserror.workspace = true
csv.workspace = true
regex.workspace = true