[package]
name = "fio"
version = "0.1.0"
edition = "2024"

[dependencies]
itertools = "0.14"
pyo3.workspace = true
serde.workspace = true
common.workspace = true
typetag.workspace = true
md5 = "0.7"
eyre.workspace = true
async-trait.workspace = true
serde_json.workspace = true
tracing.workspace = true
tokio.workspace = true
rand = "0.9"
rayon = "1.10"
