[package]
name = "ycsb"
version = "0.1.0"
edition = "2024"

[dependencies]
serde.workspace = true
common.workspace = true
typetag.workspace = true
md5.workspace = true
eyre.workspace = true
async-trait.workspace = true
serde_json.workspace = true
tracing.workspace = true
tokio.workspace = true
flume.workspace = true
regex.workspace = true
fio = { path = "../../benches/fio", optional = true}

[features]
prefill = ["dep:fio"]