[package]
name = "cmd-basic"
version = "0.1.0"
edition = "2024"

[dependencies]
common.workspace = true
serde.workspace = true
typetag.workspace = true
eyre.workspace = true
async-trait.workspace = true
tokio.workspace = true
serde_json.workspace = true
tracing.workspace = true
futures.workspace = true
rayon.workspace = true
default-benches.workspace = true
plot-common.workspace = true
cmd = { path = "../../benches/cmd" }