[package]
name = "plot-common"
version = "0.1.0"
edition = "2024"

[dependencies]
common.workspace = true
default-sensors.workspace = true
default-benches.workspace = true
diskstat = { path = "../../sensors/diskstat" }
powersensor_3 = { path = "../../sensors/powersensor_3" }
rapl = { path = "../../sensors/rapl" }
sysinfo = { path = "../../sensors/sysinfo" }