[package]
name = "fio-bw-over-time"
version = "0.1.0"
edition = "2024"

[dependencies]
common.workspace = true
serde.workspace = true
typetag.workspace = true
eyre.workspace = true
async-trait.workspace = true
tokio.workspace = true
fio = { path = "../../benches/fio" }
serde_json.workspace = true
itertools.workspace = true
tracing.workspace = true
rayon = "1.10"