[package]
name = "tpcc-basic"
version = "0.1.0"
edition = "2024"

[dependencies]
common.workspace = true
serde.workspace = true
typetag.workspace = true
eyre.workspace = true
async-trait.workspace = true
tokio.workspace = true
tpcc-postgres = { path = "../../benches/tpcc-postgres" }
serde_json.workspace = true
tracing.workspace = true
itertools.workspace = true
futures.workspace = true
rayon.workspace = true