[package]
name = "ycsb-basic"
version = "0.1.0"
edition = "2024"

[dependencies]
common.workspace = true
serde.workspace = true
typetag.workspace = true
eyre.workspace = true
async-trait.workspace = true
tokio.workspace = true
ycsb = { path = "../../benches/ycsb" }
serde_json.workspace = true
tracing.workspace = true
itertools.workspace = true
futures.workspace = true
rayon.workspace = true
plot-common.workspace = true
default-benches.workspace = true