[package]
name = "netio-http"
version = "0.1.0"
edition = "2024"

[dependencies]
serde.workspace = true
typetag.workspace = true
common.workspace = true
eyre.workspace = true
tokio.workspace = true
flume.workspace = true
tracing.workspace = true
futures.workspace = true
sensor-common.workspace = true
reqwest = { version = "0.12", default-features = false, features = ["json"] }