[package]
name = "pmt"
version = "0.1.0"
edition = "2024"

[dependencies]
cxx.workspace = true
thiserror.workspace = true
serde.workspace = true
common.workspace = true
flume.workspace = true
eyre.workspace = true
typetag.workspace = true
tokio.workspace = true
tracing.workspace = true
async-io.workspace = true

[build-dependencies]
cmake = "0.1"
cxx-build.workspace = true